-Catched some bugs in id-initialization